<resources>
    <string name="app_name">GDicc</string>
    <string name="title_activity_all_words">AllWords</string>
    <string name="title_activity_all_words_web">AllWords</string>
    <string name="Spanish">Español</string>
    <string name="Guarani">Guaraní</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_messages_items">%1$s: %2$s. %3$s \n %4$s \n </string>
    <string name="share_messages_tag">Traducción obtenida de Gdicc </string>
    <string name="share_app_messages">Gdic diccionario guaraní-español. https://play.google.com/store/apps/details?id=</string>
    <string name="copy_to_clipboard">Copiado a portapapeles</string>
    <string name="add_word_text">Palabra agregada</string>
    <string name="donwload_word_text">Palabra disponible offline</string>
    <string name="evaluation_thanks_text">Gracias por evaluar la traducción!</string>
    <string name="evaluation_done_text">Ya evaluaste esta traducción</string>
    <string name="delete_word_text">Palabra eliminada</string>
    <string name="action_bar_button_search">Ingrese texto</string>
    <string name="select_language">Seleccione lenguaje</string>
    <string name="share_app">Compartir GDicc</string>
    <string name="calificate">Calificar Gdicc</string>
    <string name="about">Sobre GDicc</string>
    <string name="show_favorites">Favoritos</string>
    <string name="show_configuration">Configuración</string>
    <string name="show_antonyms">Antonimos</string>
    <string name="show_synonym">Sinonimos</string>
    <string name="change_app_language">Sinonimos</string>
    <string name="api_url">http://gdiccw.000webhostapp.com/gdicc.php</string>
    <string name="not_found_word">No se encontraron resultados en su dispositivo. Intente presionando "Buscar en la web"</string>
    <string name="not_found_word_web">No se encontraron resultados. Si conoce la traducción puede agregarla a nuestro diccionario presionando +</string>
    <string name="look_web">Buscar en la web</string>
    <string-array name="languages_array">
        <item>Español</item>
        <item>Guaraní</item>
    </string-array>

    <string-array name="type_array">
        <item>sustantivo</item>
        <item>adjetivo</item>
        <item>adverbio</item>
        <item>verbo</item>
    </string-array>


</resources>
