<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lanacondio.diccionarioguarani.MainActivity">


    <item
        android:title="@string/Guarani"
        android:textColor="?attr/font_color"
        app:showAsAction="always"
        android:id="@+id/originLanguageTextView"
        />

    <item
        android:id="@+id/action_select_language"
        android:icon="@mipmap/ic_swap_horiz_white_24dp"
        android:title="@string/select_language"
        app:showAsAction="always"/>

    <item
        android:title="@string/Spanish"
        android:textColor="?attr/font_color"
        app:showAsAction="always"
        android:id="@+id/translationLanguageTextView"
        />


    <!-- Settings, should always be in the overflow -->

    <item
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always">
        <menu>
            <item
                android:icon="@mipmap/ic_favorite_black_24dp"
                android:id="@+id/favorites"
                android:title="@string/show_favorites" />
<!--
            <item
                android:icon="@mipmap/ic_language_black_18dp"
                android:id="@+id/change_language"
                android:title="@string/change_app_language" />
-->
            <item
                android:icon="@mipmap/ic_settings_black_18dp"
                android:id="@+id/configuration"
                android:textSize="?attr/font_small"
                android:title="@string/show_configuration" />


            <item
                android:icon="@mipmap/ic_share_black_18dp"
                android:id="@+id/Share_app"
                android:textSize="?attr/font_small"
                android:title="@string/share_app" />

            <item
                android:icon="@mipmap/ic_star_black_18dp"
                android:id="@+id/calificate_app"
                android:textSize="?attr/font_small"
                android:title="@string/calificate" />

            <item
                android:icon="@mipmap/ic_priority_high_black_18dp"
                android:id="@+id/about_app"
                android:textSize="?attr/font_small"
                android:title="@string/about" />

        </menu>
    </item>


</menu>
