<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lanacondio.diccionarioguarani.AllWordsActivity">


    <item
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/favorites"
                android:title="@string/show_favorites" />

            <item
                android:id="@+id/sinonimos"
                android:title="@string/show_synonym" />

            <item
                android:id="@+id/antonimos"
                android:title="@string/show_antonyms" />


        </menu>
    </item>


</menu>