<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lanacondio.diccionarioguarani.FavoritesActivity">


    <item
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always">
        <menu>
   <!--
            <item
                android:icon="@mipmap/ic_language_black_18dp"
                android:id="@+id/change_language"
                android:title="@string/change_app_language" />

            <item
                android:icon="@mipmap/ic_settings_black_18dp"
                android:id="@+id/configuration"
                android:title="@string/show_configuration" />
-->

            <item
                android:icon="@mipmap/ic_share_black_18dp"
                android:id="@+id/Share_app"
                android:textSize="?attr/font_small"
                android:title="@string/share_app" />

            <item
                android:icon="@mipmap/ic_star_black_18dp"
                android:id="@+id/calificate_app"
                android:textSize="?attr/font_small"
                android:title="@string/calificate" />

            <item
                android:icon="@mipmap/ic_priority_high_black_18dp"
                android:id="@+id/about_app"
                android:textSize="?attr/font_small"
                android:title="@string/about" />


        </menu>
    </item>


</menu>